all spaces add test completed

--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -12,7 +12,7 @@
 <tr>
 <td>&nbsp;</td>
 <td>verifyLogin_Tc_001</td>
-<td>regression,sanity,smoke </td>
+<td>regression smoke sanity </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -42,23 +42,48 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>verifyDeleteSpace_TC_212</td>
+<td>regression smoke sanity </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifySpaceData_afterEdit_TC_208</td>
+<td>regression smoke sanity </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
 <td>multipleUsersWithMutlipleSelections_TC_203</td>
 <td>regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>verifySpacePage_Tc_201</td>
-<td>regression,sanity,smoke </td>
+<td>regression smoke sanity </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifySpaceFromTableAfterAdd_TC_205</td>
+<td>verifySpaceData_fromTableData_TC_205</td>
+<td>regression smoke sanity </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>add_Spaces_Single_And_Carparking_Options_TC_213</td>
 <td>regression,smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>addSpace_skippingFileds_TC_204</td>
+<td>regression smoke sanity </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>verifyPopupAddSpace_TC_202</td>
-<td>regression,smoke </td>
+<td>regression smoke sanity </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verify_serachField_withSpaceName_TC_211</td>
+<td>regression smoke sanity </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
