--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,38 +1,80 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a7c7e0">  <td>23/10/31 00:05:11</td>   <td>0</td> <td title="&gt;&gt;TestBase.loadConfig()[pri:0, instance:com.marina.tests.Mod_1_login@1da2cb77]">&gt;&gt;loadConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@335359181</td>   <td></td> </tr>
-<tr bgcolor="c288aa">  <td>23/10/31 00:05:12</td>   <td>515</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_1_login.beforeTest()[pri:0, instance:com.marina.tests.Mod_1_login@1da2cb77]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>TestNG-test=test-1@455709334</td>   <td></td> </tr>
-<tr bgcolor="fa7c99">  <td>23/10/31 00:05:12</td>   <td>520</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@48f278eb]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>TestNG-test=test-2@2069390685</td>   <td></td> </tr>
-<tr bgcolor="c288aa">  <td>23/10/31 00:05:47</td>   <td>36028</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_1_login.verifyLogin_Tc_001()[pri:1, instance:com.marina.tests.Mod_1_login@1da2cb77]">verifyLogin_Tc_001</td> 
-  <td>TestNG-test=test-1@455709334</td>   <td></td> </tr>
-<tr bgcolor="fa7c99">  <td>23/10/31 00:05:55</td>   <td>43953</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.verifySpacePage_Tc_201()[pri:1, instance:com.marina.tests.Mod_2_SpaceTypes@48f278eb]">verifySpacePage_Tc_201</td> 
-  <td>TestNG-test=test-2@2069390685</td>   <td></td> </tr>
-<tr bgcolor="fa7c99">  <td>23/10/31 00:05:56</td>   <td>45196</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@48f278eb]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>TestNG-test=test-2@2069390685</td>   <td></td> </tr>
-<tr bgcolor="c288aa">  <td>23/10/31 00:05:57</td>   <td>46019</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_1_login.afterTest()[pri:0, instance:com.marina.tests.Mod_1_login@1da2cb77]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>TestNG-test=test-1@455709334</td>   <td></td> </tr>
-<tr bgcolor="fa7c99">  <td>23/10/31 00:06:03</td>   <td>51817</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@48f278eb]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>TestNG-test=test-2@2069390685</td>   <td></td> </tr>
-<tr bgcolor="fa7c99">  <td>23/10/31 00:06:35</td>   <td>84041</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.verifyPopupAddSpace_TC_202()[pri:2, instance:com.marina.tests.Mod_2_SpaceTypes@48f278eb]">verifyPopupAddSpace_TC_202</td> 
-  <td>TestNG-test=test-2@2069390685</td>   <td></td> </tr>
-<tr bgcolor="fa7c99">  <td>23/10/31 00:06:36</td>   <td>85102</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@48f278eb]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>TestNG-test=test-2@2069390685</td>   <td></td> </tr>
-<tr bgcolor="fa7c99">  <td>23/10/31 00:06:39</td>   <td>87966</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@48f278eb]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>TestNG-test=test-2@2069390685</td>   <td></td> </tr>
-<tr bgcolor="fa7c99">  <td>23/10/31 00:07:21</td>   <td>130368</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.multipleUsersWithMutlipleSelections_TC_203()[pri:4, instance:com.marina.tests.Mod_2_SpaceTypes@48f278eb]">multipleUsersWithMutlipleSelections_TC_203</td> 
-  <td>TestNG-test=test-2@2069390685</td>   <td></td> </tr>
-<tr bgcolor="fa7c99">  <td>23/10/31 00:07:22</td>   <td>131221</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@48f278eb]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>TestNG-test=test-2@2069390685</td>   <td></td> </tr>
-<tr bgcolor="fa7c99">  <td>23/10/31 00:07:26</td>   <td>135223</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@48f278eb]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>TestNG-test=test-2@2069390685</td>   <td></td> </tr>
-<tr bgcolor="fa7c99">  <td>23/10/31 00:09:20</td>   <td>249262</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.verifySpaceFromTableAfterAdd_TC_205()[pri:5, instance:com.marina.tests.Mod_2_SpaceTypes@48f278eb]">verifySpaceFromTableAfterAdd_TC_205</td> 
-  <td>TestNG-test=test-2@2069390685</td>   <td></td> </tr>
-<tr bgcolor="fa7c99">  <td>23/10/31 00:09:41</td>   <td>269996</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@48f278eb]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>TestNG-test=test-2@2069390685</td>   <td></td> </tr>
-<tr bgcolor="a7c7e0">  <td>23/10/31 00:09:44</td>   <td>272514</td> <td title="&lt;&lt;TestBase.afterSuite()[pri:0, instance:com.marina.tests.Mod_1_login@1da2cb77]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@335359181</td>   <td></td> </tr>
+<tr bgcolor="a7c7e0">  <td>23/11/07 03:52:37</td>   <td>0</td> <td title="&gt;&gt;TestBase.loadConfig()[pri:0, instance:com.marina.tests.Mod_1_login@66d3eec0]">&gt;&gt;loadConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2017085051</td>   <td></td> </tr>
+<tr bgcolor="c288aa">  <td>23/11/07 03:52:37</td>   <td>656</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_1_login.beforeTest()[pri:0, instance:com.marina.tests.Mod_1_login@66d3eec0]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>TestNG-test=test-1@147910939</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/11/07 03:52:37</td>   <td>659</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@1e04fa0a]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>TestNG-test=test-2@1020570704</td>   <td></td> </tr>
+<tr bgcolor="c288aa">  <td>23/11/07 03:53:25</td>   <td>48322</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_1_login.verifyLogin_Tc_001()[pri:1, instance:com.marina.tests.Mod_1_login@66d3eec0]">verifyLogin_Tc_001</td> 
+  <td>TestNG-test=test-1@147910939</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/11/07 03:53:27</td>   <td>49967</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.verifySpacePage_Tc_201()[pri:2, instance:com.marina.tests.Mod_2_SpaceTypes@1e04fa0a]">verifySpacePage_Tc_201</td> 
+  <td>TestNG-test=test-2@1020570704</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/11/07 03:53:27</td>   <td>50092</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@1e04fa0a]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>TestNG-test=test-2@1020570704</td>   <td></td> </tr>
+<tr bgcolor="c288aa">  <td>23/11/07 03:53:34</td>   <td>56911</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_1_login.afterTest()[pri:0, instance:com.marina.tests.Mod_1_login@66d3eec0]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>TestNG-test=test-1@147910939</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/11/07 03:53:43</td>   <td>66632</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@1e04fa0a]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>TestNG-test=test-2@1020570704</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/11/07 03:54:20</td>   <td>103557</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.verifyPopupAddSpace_TC_202()[pri:3, instance:com.marina.tests.Mod_2_SpaceTypes@1e04fa0a]">verifyPopupAddSpace_TC_202</td> 
+  <td>TestNG-test=test-2@1020570704</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/11/07 03:54:24</td>   <td>107260</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@1e04fa0a]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>TestNG-test=test-2@1020570704</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/11/07 03:54:40</td>   <td>123620</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@1e04fa0a]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>TestNG-test=test-2@1020570704</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/11/07 03:55:17</td>   <td>160213</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.multipleUsersWithMutlipleSelections_TC_203()[pri:4, instance:com.marina.tests.Mod_2_SpaceTypes@1e04fa0a]">multipleUsersWithMutlipleSelections_TC_203</td> 
+  <td>TestNG-test=test-2@1020570704</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/11/07 04:03:05</td>   <td>628088</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@1e04fa0a]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>TestNG-test=test-2@1020570704</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/11/07 04:03:18</td>   <td>640905</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@1e04fa0a]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>TestNG-test=test-2@1020570704</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/11/07 04:04:05</td>   <td>688397</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.addSpace_skippingFileds_TC_204()[pri:5, instance:com.marina.tests.Mod_2_SpaceTypes@1e04fa0a]">addSpace_skippingFileds_TC_204</td> 
+  <td>TestNG-test=test-2@1020570704</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/11/07 04:04:22</td>   <td>705162</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@1e04fa0a]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>TestNG-test=test-2@1020570704</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/11/07 04:04:32</td>   <td>715296</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@1e04fa0a]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>TestNG-test=test-2@1020570704</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/11/07 04:05:01</td>   <td>744731</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.add_Spaces_Single_And_Carparking_Options_TC_213()[pri:6, instance:com.marina.tests.Mod_2_SpaceTypes@1e04fa0a]">add_Spaces_Single_And_Carparking_Options_TC_213</td> 
+  <td>TestNG-test=test-2@1020570704</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/11/07 04:06:32</td>   <td>835774</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@1e04fa0a]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>TestNG-test=test-2@1020570704</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/11/07 04:06:42</td>   <td>845655</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@1e04fa0a]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>TestNG-test=test-2@1020570704</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/11/07 04:07:22</td>   <td>884923</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.verifySpaceData_fromTableData_TC_205()[pri:6, instance:com.marina.tests.Mod_2_SpaceTypes@1e04fa0a]">verifySpaceData_fromTableData_TC_205</td> 
+  <td>TestNG-test=test-2@1020570704</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/11/07 04:09:21</td>   <td>1004092</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@1e04fa0a]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>TestNG-test=test-2@1020570704</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/11/07 04:09:30</td>   <td>1013620</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@1e04fa0a]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>TestNG-test=test-2@1020570704</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/11/07 04:10:04</td>   <td>1047525</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.verifySpaceData_fromTableData_TC_205()[pri:6, instance:com.marina.tests.Mod_2_SpaceTypes@1e04fa0a]">verifySpaceData_fromTableData_TC_205</td> 
+  <td>TestNG-test=test-2@1020570704</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/11/07 04:11:44</td>   <td>1147089</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@1e04fa0a]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>TestNG-test=test-2@1020570704</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/11/07 04:11:54</td>   <td>1156925</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@1e04fa0a]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>TestNG-test=test-2@1020570704</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/11/07 04:12:26</td>   <td>1189374</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.verifySpaceData_afterEdit_TC_208()[pri:9, instance:com.marina.tests.Mod_2_SpaceTypes@1e04fa0a]">verifySpaceData_afterEdit_TC_208</td> 
+  <td>TestNG-test=test-2@1020570704</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/11/07 04:14:51</td>   <td>1334761</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@1e04fa0a]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>TestNG-test=test-2@1020570704</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/11/07 04:15:01</td>   <td>1344424</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@1e04fa0a]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>TestNG-test=test-2@1020570704</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/11/07 04:15:34</td>   <td>1377275</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.verify_serachField_withSpaceName_TC_211()[pri:12, instance:com.marina.tests.Mod_2_SpaceTypes@1e04fa0a]">verify_serachField_withSpaceName_TC_211</td> 
+  <td>TestNG-test=test-2@1020570704</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/11/07 04:16:20</td>   <td>1423221</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@1e04fa0a]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>TestNG-test=test-2@1020570704</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/11/07 04:17:07</td>   <td>1470569</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@1e04fa0a]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>TestNG-test=test-2@1020570704</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/11/07 04:18:17</td>   <td>1540603</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.verify_serachField_withSpaceName_TC_211()[pri:12, instance:com.marina.tests.Mod_2_SpaceTypes@1e04fa0a]">verify_serachField_withSpaceName_TC_211</td> 
+  <td>TestNG-test=test-2@1020570704</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/11/07 04:20:17</td>   <td>1660476</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@1e04fa0a]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>TestNG-test=test-2@1020570704</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/11/07 04:20:28</td>   <td>1670862</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@1e04fa0a]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>TestNG-test=test-2@1020570704</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/11/07 04:20:54</td>   <td>1697808</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.verifyDeleteSpace_TC_212()[pri:13, instance:com.marina.tests.Mod_2_SpaceTypes@1e04fa0a]">verifyDeleteSpace_TC_212</td> 
+  <td>TestNG-test=test-2@1020570704</td>   <td></td> </tr>
+<tr bgcolor="fa7c99">  <td>23/11/07 04:22:17</td>   <td>1780715</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@1e04fa0a]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>TestNG-test=test-2@1020570704</td>   <td></td> </tr>
+<tr bgcolor="a7c7e0">  <td>23/11/07 04:22:28</td>   <td>1791036</td> <td title="&lt;&lt;TestBase.afterSuite()[pri:0, instance:com.marina.tests.Mod_1_login@66d3eec0]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2017085051</td>   <td></td> </tr>
 </table>
