--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,69 +8,37 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">580,173</td><td></td><td></td></tr>
+<tr><th colspan="8">Suite</th></tr>
+<tr><td><a href="#t0">test</a></td><td class="num">9</td><td class="num">0</td><td class="num attn">2</td><td class="num attn">1</td><td class="num">1,790,292</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.marina.tests.Mod_2_SpaceTypes</td><td><a href="#m0">multipleUsersWithMutlipleSelections_TC_203</a></td><td rowspan="1">1698737012424</td><td rowspan="1">517301</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.marina.tests.Mod_2_SpaceTypes</td><td><a href="#m0">add_Spaces_Single_And_Carparking_Options_TC_213</a></td><td rowspan="1">1699358701879</td><td rowspan="1">90498</td></tr><tr><th colspan="4">test &#8212; retried</th></tr><tr class="retriedeven"><td rowspan="2">com.marina.tests.Mod_2_SpaceTypes</td><td><a href="#m1">verifySpaceData_fromTableData_TC_205</a></td><td rowspan="1">1699358842071</td><td rowspan="1">119156</td></tr><tr class="retriedeven"><td><a href="#m2">verify_serachField_withSpaceName_TC_211</a></td><td rowspan="1">1699359334423</td><td rowspan="1">45939</td></tr><tr><th colspan="4">test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.marina.tests.Mod_1_login</td><td><a href="#m3">verifyLogin_Tc_001</a></td><td rowspan="1">1699358005470</td><td rowspan="1">8586</td></tr><tr class="passedodd"><td rowspan="8">com.marina.tests.Mod_2_SpaceTypes</td><td><a href="#m4">addSpace_skippingFileds_TC_204</a></td><td rowspan="1">1699358645545</td><td rowspan="1">16763</td></tr><tr class="passedodd"><td><a href="#m5">multipleUsersWithMutlipleSelections_TC_203</a></td><td rowspan="1">1699358117361</td><td rowspan="1">467869</td></tr><tr class="passedodd"><td><a href="#m6">verifyDeleteSpace_TC_212</a></td><td rowspan="1">1699359654956</td><td rowspan="1">82905</td></tr><tr class="passedodd"><td><a href="#m7">verifyPopupAddSpace_TC_202</a></td><td rowspan="1">1699358060705</td><td rowspan="1">3698</td></tr><tr class="passedodd"><td><a href="#m8">verifySpaceData_afterEdit_TC_208</a></td><td rowspan="1">1699359146522</td><td rowspan="1">145384</td></tr><tr class="passedodd"><td><a href="#m9">verifySpaceData_fromTableData_TC_205</a></td><td rowspan="1">1699359004673</td><td rowspan="1">99561</td></tr><tr class="passedodd"><td><a href="#m10">verifySpacePage_Tc_201</a></td><td rowspan="1">1699358007115</td><td rowspan="1">107</td></tr><tr class="passedodd"><td><a href="#m11">verify_serachField_withSpaceName_TC_211</a></td><td rowspan="1">1699359497751</td><td rowspan="1">119871</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.marina.tests.Mod_2_SpaceTypes#multipleUsersWithMutlipleSelections_TC_203</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.openqa.selenium.ElementNotInteractableException: element not interactable
-  (Session info: chrome=118.0.5993.118)
-Build info: version: &apos;4.13.0&apos;, revision: &apos;ba948ece5b*&apos;
-System info: os.name: &apos;Windows 10&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;17.0.8&apos;
-Driver info: org.openqa.selenium.chrome.ChromeDriver
-Command: [f4ff60db9e4806bb455a120e8ae7180d, clickElement {id=34C86D9392D5F0BD1F59BE2EC6C37A25_element_320}]
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 118.0.5993.118, chrome: {chromedriverVersion: 118.0.5993.70 (e52f33f30b91..., userDataDir: C:\Users\TALHAT~1\AppData\L...}, fedcm:accounts: true, goog:chromeOptions: {debuggerAddress: localhost:59596}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: windows, proxy: Proxy(), se:cdp: ws://localhost:59596/devtoo..., se:cdpVersion: 118.0.5993.118, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:extension:minPinLength: true, webauthn:extension:prf: true, webauthn:virtualAuthenticators: true}
-Element: [[ChromeDriver: chrome on windows (f4ff60db9e4806bb455a120e8ae7180d)] -&gt; xpath: //select[@name=&apos;boats&apos;]]
-Session ID: f4ff60db9e4806bb455a120e8ae7180d
-	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)
-	at java.base/jdk.internal.reflect.NativeConstructorAccessorImpl.newInstance(NativeConstructorAccessorImpl.java:77)
-	at java.base/jdk.internal.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)
-	at java.base/java.lang.reflect.Constructor.newInstanceWithCaller(Constructor.java:499)
-	at java.base/java.lang.reflect.Constructor.newInstance(Constructor.java:480)
-	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.createException(W3CHttpResponseCodec.java:200)
-	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:133)
-	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:52)
-	at org.openqa.selenium.remote.HttpCommandExecutor.execute(HttpCommandExecutor.java:191)
-	at org.openqa.selenium.remote.service.DriverCommandExecutor.invokeExecute(DriverCommandExecutor.java:196)
-	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:171)
-	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:602)
-	at org.openqa.selenium.remote.RemoteWebElement.execute(RemoteWebElement.java:224)
-	at org.openqa.selenium.remote.RemoteWebElement.click(RemoteWebElement.java:77)
-	at jdk.internal.reflect.GeneratedMethodAccessor3.invoke(Unknown Source)
-	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
-	at java.base/java.lang.reflect.Method.invoke(Method.java:568)
-	at org.openqa.selenium.support.pagefactory.internal.LocatingElementHandler.invoke(LocatingElementHandler.java:51)
-	at jdk.proxy2/jdk.proxy2.$Proxy21.click(Unknown Source)
-	at com.marina.pages.SpaceTypesAddTypesPage.addingNewSpace(SpaceTypesAddTypesPage.java:163)
-	at com.marina.tests.Mod_2_SpaceTypes.multipleUsersWithMutlipleSelections_TC_203(Mod_2_SpaceTypes.java:96)
-	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
-	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
-	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
-	at java.base/java.lang.reflect.Method.invoke(Method.java:568)
-	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:134)
-	at org.testng.internal.TestInvoker.invokeMethod(TestInvoker.java:597)
-	at org.testng.internal.TestInvoker.invokeTestMethod(TestInvoker.java:173)
-	at org.testng.internal.MethodRunner.runInSequence(MethodRunner.java:46)
-	at org.testng.internal.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:816)
-	at org.testng.internal.TestInvoker.invokeTestMethods(TestInvoker.java:146)
-	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:146)
-	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:128)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-	at org.testng.TestRunner.privateRun(TestRunner.java:766)
-	at org.testng.TestRunner.run(TestRunner.java:587)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:384)
-	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:378)
-	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:337)
-	at org.testng.SuiteRunner.run(SuiteRunner.java:286)
-	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:53)
-	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:96)
-	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1187)
-	at org.testng.TestNG.runSuitesLocally(TestNG.java:1109)
-	at org.testng.TestNG.runSuites(TestNG.java:1039)
-	at org.testng.TestNG.run(TestNG.java:1007)
-	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
-	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
-	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
-</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>test</h2><h3 id="m0">com.marina.tests.Mod_2_SpaceTypes#add_Spaces_Single_And_Carparking_Options_TC_213</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [Test_tbt_001] but found [null]
+	at com.marina.tests.Mod_2_SpaceTypes.add_Spaces_Single_And_Carparking_Options_TC_213(Mod_2_SpaceTypes.java:190)
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1136)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
+	at java.base/java.lang.Thread.run(Thread.java:833)
+... Removed 18 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.marina.tests.Mod_2_SpaceTypes#verifySpaceData_fromTableData_TC_205</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: Arrays differ at element [4]: $/period != $/ft/period expected [$/period] but found [$/ft/period]
+	at com.marina.tests.Mod_2_SpaceTypes.verifySpaceData_fromTableData_TC_205(Mod_2_SpaceTypes.java:122)
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1136)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
+	at java.base/java.lang.Thread.run(Thread.java:833)
+... Removed 16 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.marina.tests.Mod_2_SpaceTypes#verify_serachField_withSpaceName_TC_211</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [Slip] but found [Test_tbt_001]
+	at com.marina.tests.Mod_2_SpaceTypes.verify_serachField_withSpaceName_TC_211(Mod_2_SpaceTypes.java:161)
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1136)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
+	at java.base/java.lang.Thread.run(Thread.java:833)
+... Removed 17 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.marina.tests.Mod_1_login#verifyLogin_Tc_001</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">com.marina.tests.Mod_2_SpaceTypes#addSpace_skippingFileds_TC_204</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">com.marina.tests.Mod_2_SpaceTypes#multipleUsersWithMutlipleSelections_TC_203</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">com.marina.tests.Mod_2_SpaceTypes#verifyDeleteSpace_TC_212</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m7">com.marina.tests.Mod_2_SpaceTypes#verifyPopupAddSpace_TC_202</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m8">com.marina.tests.Mod_2_SpaceTypes#verifySpaceData_afterEdit_TC_208</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m9">com.marina.tests.Mod_2_SpaceTypes#verifySpaceData_fromTableData_TC_205</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m10">com.marina.tests.Mod_2_SpaceTypes#verifySpacePage_Tc_201</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m11">com.marina.tests.Mod_2_SpaceTypes#verify_serachField_withSpaceName_TC_211</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
