--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,8 +11,8 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>add_Spaces_Single_And_Carparking_Options_TC_213</td>
-<td>regression,smoke </td>
+<td>exportNewAddSpace_verifyCompleteRecords_TC_209</td>
+<td>regression smoke sanity </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
