--- a/test-output/old/Default suite/groups.html
+++ b/test-output/old/Default suite/groups.html
@@ -1,3 +1,5 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>regression,smoke</td><td>Mod_2_SpaceTypes.add_Spaces_Single_And_Carparking_Options_TC_213()[pri:6, instance:com.marina.tests.Mod_2_SpaceTypes@53fdffa1]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>regression</td><td>Mod_2_SpaceTypes.exportNewAddSpace_verifyCompleteRecords_TC_209()[pri:1, instance:com.marina.tests.Mod_2_SpaceTypes@67c33749]<br/></td></tr>
+<tr><td>sanity</td><td>Mod_2_SpaceTypes.exportNewAddSpace_verifyCompleteRecords_TC_209()[pri:1, instance:com.marina.tests.Mod_2_SpaceTypes@67c33749]<br/></td></tr>
+<tr><td>smoke</td><td>Mod_2_SpaceTypes.exportNewAddSpace_verifyCompleteRecords_TC_209()[pri:1, instance:com.marina.tests.Mod_2_SpaceTypes@67c33749]<br/></td></tr>
 </table>
