Changes in the AllSpace TestClass after integration

--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,71 +4,15 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.marina.tests.Mod_6_BoatGroup</td>
+<td>com.marina.tests.Mod_3_AllSpaces</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<<<<<<< HEAD
-<td>verifyBoatGroupPageOpens_TC_1001</td>
-<td>regression,sanity,smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>addBoatMainPage_TC_1007</td>
-<td>regression,sanity,smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>editBoatGroupVerifyData_TC_1008</td>
-<td>regression,sanity,smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>addBoatGroupMandatoryFields_TC_1002</td>
-<td>regression,sanity,smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>generatingMultipleAddRequest_TC_1009</td>
-<td>regression,sanity,smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>deleteBoatGroups_TC_1011</td>
-<td>regression,sanity,smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifyCopyFunctionBoatGroup_TC_1010</td>
-<td>regression,sanity,smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>viewPageNewBoatAdd_TC_1006</td>
-<td>regression,sanity,smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>viewSavedDataBoatGroup_TC_1005</td>
-<td>regression,sanity,smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>addBoatGroupAllFields_TC_1003</td>
-<td>regression,sanity,smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>searchBoatGroup_TC_1004</td>
-<td>regression,sanity,smoke </td>
-=======
-<td>exportNewAddSpace_verifyCompleteRecords_TC_209</td>
-<td>regression smoke sanity </td>
->>>>>>> refs/heads/Talha
-</tr>
+<td>createNewSpaceMandatoryFields_TC_402</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
@@ -77,14 +21,14 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>beforeMethod</td>
+<td>beforeTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>afterMethod</td>
+<td>afterTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
