--- a/test-output/old/Default suite/groups.html
+++ b/test-output/old/Default suite/groups.html
@@ -1,9 +1,1 @@
-<h2>Groups used for this test run</h2><table border="1">
-<<<<<<< HEAD
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>regression,sanity,smoke</td><td>Mod_6_BoatGroup.verifyBoatGroupPageOpens_TC_1001()[pri:1, instance:com.marina.tests.Mod_6_BoatGroup@491cc5c9]<br/>Mod_6_BoatGroup.deleteBoatGroups_TC_1011()[pri:11, instance:com.marina.tests.Mod_6_BoatGroup@491cc5c9]<br/>Mod_6_BoatGroup.addBoatMainPage_TC_1007()[pri:7, instance:com.marina.tests.Mod_6_BoatGroup@491cc5c9]<br/>Mod_6_BoatGroup.editBoatGroupVerifyData_TC_1008()[pri:8, instance:com.marina.tests.Mod_6_BoatGroup@491cc5c9]<br/>Mod_6_BoatGroup.generatingMultipleAddRequest_TC_1009()[pri:9, instance:com.marina.tests.Mod_6_BoatGroup@491cc5c9]<br/>Mod_6_BoatGroup.addBoatGroupMandatoryFields_TC_1002()[pri:2, instance:com.marina.tests.Mod_6_BoatGroup@491cc5c9]<br/>Mod_6_BoatGroup.viewSavedDataBoatGroup_TC_1005()[pri:5, instance:com.marina.tests.Mod_6_BoatGroup@491cc5c9]<br/>Mod_6_BoatGroup.addBoatGroupAllFields_TC_1003()[pri:3, instance:com.marina.tests.Mod_6_BoatGroup@491cc5c9]<br/>Mod_6_BoatGroup.searchBoatGroup_TC_1004()[pri:4, instance:com.marina.tests.Mod_6_BoatGroup@491cc5c9]<br/>Mod_6_BoatGroup.verifyCopyFunctionBoatGroup_TC_1010()[pri:10, instance:com.marina.tests.Mod_6_BoatGroup@491cc5c9]<br/>Mod_6_BoatGroup.viewPageNewBoatAdd_TC_1006()[pri:6, instance:com.marina.tests.Mod_6_BoatGroup@491cc5c9]<br/></td></tr>
-=======
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>regression</td><td>Mod_2_SpaceTypes.exportNewAddSpace_verifyCompleteRecords_TC_209()[pri:1, instance:com.marina.tests.Mod_2_SpaceTypes@67c33749]<br/></td></tr>
-<tr><td>sanity</td><td>Mod_2_SpaceTypes.exportNewAddSpace_verifyCompleteRecords_TC_209()[pri:1, instance:com.marina.tests.Mod_2_SpaceTypes@67c33749]<br/></td></tr>
-<tr><td>smoke</td><td>Mod_2_SpaceTypes.exportNewAddSpace_verifyCompleteRecords_TC_209()[pri:1, instance:com.marina.tests.Mod_2_SpaceTypes@67c33749]<br/></td></tr>
->>>>>>> refs/heads/Talha
-</table>
+<h2>Groups used for this test run</h2>
