--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,53 +8,45 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Suite</th></tr>
-<<<<<<< HEAD
-<tr><td><a href="#t0">test</a></td><td class="num">10</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">418,572</td><td></td><td></td></tr>
-=======
-<tr><td><a href="#t0">test</a></td><td class="num">10</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">1,339,622</td><td></td><td></td></tr>
->>>>>>> refs/heads/Talha
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">42,776</td><td></td><td></td></tr>
 </table>
-<<<<<<< HEAD
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.marina.tests.Mod_6_BoatGroup</td><td><a href="#m0">generatingMultipleAddRequest_TC_1009</a></td><td rowspan="1">1699335499764</td><td rowspan="1">25418</td></tr><tr><th colspan="4">test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="10">com.marina.tests.Mod_6_BoatGroup</td><td><a href="#m1">addBoatGroupAllFields_TC_1003</a></td><td rowspan="1">1699335301963</td><td rowspan="1">5696</td></tr><tr class="passedeven"><td><a href="#m2">addBoatGroupMandatoryFields_TC_1002</a></td><td rowspan="1">1699335270478</td><td rowspan="1">4532</td></tr><tr class="passedeven"><td><a href="#m3">addBoatMainPage_TC_1007</a></td><td rowspan="1">1699335422921</td><td rowspan="1">7308</td></tr><tr class="passedeven"><td><a href="#m4">deleteBoatGroups_TC_1011</a></td><td rowspan="1">1699335585490</td><td rowspan="1">38818</td></tr><tr class="passedeven"><td><a href="#m5">editBoatGroupVerifyData_TC_1008</a></td><td rowspan="1">1699335456436</td><td rowspan="1">13950</td></tr><tr class="passedeven"><td><a href="#m6">searchBoatGroup_TC_1004</a></td><td rowspan="1">1699335335003</td><td rowspan="1">1330</td></tr><tr class="passedeven"><td><a href="#m7">verifyBoatGroupPageOpens_TC_1001</a></td><td rowspan="1">1699335238859</td><td rowspan="1">80</td></tr><tr class="passedeven"><td><a href="#m8">verifyCopyFunctionBoatGroup_TC_1010</a></td><td rowspan="1">1699335554100</td><td rowspan="1">6945</td></tr><tr class="passedeven"><td><a href="#m9">viewPageNewBoatAdd_TC_1006</a></td><td rowspan="1">1699335389766</td><td rowspan="1">8816</td></tr><tr class="passedeven"><td><a href="#m10">viewSavedDataBoatGroup_TC_1005</a></td><td rowspan="1">1699335361204</td><td rowspan="1">3120</td></tr></tbody>
-=======
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.marina.tests.Mod_2_SpaceTypes</td><td><a href="#m0">add_Spaces_Single_And_Carparking_Options_TC_213</a></td><td rowspan="1">1699368681022</td><td rowspan="1">88472</td></tr><tr><th colspan="4">test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.marina.tests.Mod_1_login</td><td><a href="#m1">verifyLogin_Tc_001</a></td><td rowspan="1">1699367480760</td><td rowspan="1">11020</td></tr><tr class="passedodd"><td rowspan="9">com.marina.tests.Mod_2_SpaceTypes</td><td><a href="#m2">addSpace_skippingFileds_TC_204</a></td><td rowspan="1">1699367971898</td><td rowspan="1">17748</td></tr><tr class="passedodd"><td><a href="#m3">exportNewAddSpace_verifyCompleteRecords_TC_209</a></td><td rowspan="1">1699368344489</td><td rowspan="1">4112</td></tr><tr class="passedodd"><td><a href="#m4">multipleUsersWithMutlipleSelections_TC_203</a></td><td rowspan="1">1699367597265</td><td rowspan="1">321330</td></tr><tr class="passedodd"><td><a href="#m5">verifyDeleteSpace_TC_212</a></td><td rowspan="1">1699368556330</td><td rowspan="1">85017</td></tr><tr class="passedodd"><td><a href="#m6">verifyPopupAddSpace_TC_202</a></td><td rowspan="1">1699367554722</td><td rowspan="1">3347</td></tr><tr class="passedodd"><td><a href="#m7">verifySpaceData_afterEdit_TC_208</a></td><td rowspan="1">1699368173581</td><td rowspan="1">125321</td></tr><tr class="passedodd"><td><a href="#m8">verifySpaceData_fromTableData_TC_205</a></td><td rowspan="1">1699368032064</td><td rowspan="1">98329</td></tr><tr class="passedodd"><td><a href="#m9">verifySpacePage_Tc_201</a></td><td rowspan="1">1699367498136</td><td rowspan="1">75</td></tr><tr class="passedodd"><td><a href="#m10">verify_serachField_withSpaceName_TC_211</a></td><td rowspan="1">1699368403390</td><td rowspan="1">100086</td></tr></tbody>
->>>>>>> refs/heads/Talha
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.marina.tests.Mod_3_AllSpaces</td><td><a href="#m0">createNewSpaceMandatoryFields_TC_402</a></td><td rowspan="1">1699424121633</td><td rowspan="1">10348</td></tr></tbody>
 </table>
-<<<<<<< HEAD
-<h2>test</h2><h3 id="m0">com.marina.tests.Mod_6_BoatGroup#generatingMultipleAddRequest_TC_1009</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [1] but found [3]
-	at com.marina.tests.Mod_6_BoatGroup.generatingMultipleAddRequest_TC_1009(Mod_6_BoatGroup.java:166)
-	at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1149)
-	at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:624)
-	at java.lang.Thread.run(Thread.java:748)
-... Removed 17 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.marina.tests.Mod_6_BoatGroup#addBoatGroupAllFields_TC_1003</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.marina.tests.Mod_6_BoatGroup#addBoatGroupMandatoryFields_TC_1002</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.marina.tests.Mod_6_BoatGroup#addBoatMainPage_TC_1007</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">com.marina.tests.Mod_6_BoatGroup#deleteBoatGroups_TC_1011</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">com.marina.tests.Mod_6_BoatGroup#editBoatGroupVerifyData_TC_1008</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">com.marina.tests.Mod_6_BoatGroup#searchBoatGroup_TC_1004</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m7">com.marina.tests.Mod_6_BoatGroup#verifyBoatGroupPageOpens_TC_1001</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m8">com.marina.tests.Mod_6_BoatGroup#verifyCopyFunctionBoatGroup_TC_1010</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m9">com.marina.tests.Mod_6_BoatGroup#viewPageNewBoatAdd_TC_1006</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m10">com.marina.tests.Mod_6_BoatGroup#viewSavedDataBoatGroup_TC_1005</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-=======
-<h2>test</h2><h3 id="m0">com.marina.tests.Mod_2_SpaceTypes#add_Spaces_Single_And_Carparking_Options_TC_213</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [Test_tbt_001] but found [null]
-	at com.marina.tests.Mod_2_SpaceTypes.add_Spaces_Single_And_Carparking_Options_TC_213(Mod_2_SpaceTypes.java:204)
-	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1136)
-	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
-	at java.base/java.lang.Thread.run(Thread.java:833)
-... Removed 18 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.marina.tests.Mod_1_login#verifyLogin_Tc_001</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.marina.tests.Mod_2_SpaceTypes#addSpace_skippingFileds_TC_204</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.marina.tests.Mod_2_SpaceTypes#exportNewAddSpace_verifyCompleteRecords_TC_209</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">com.marina.tests.Mod_2_SpaceTypes#multipleUsersWithMutlipleSelections_TC_203</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">com.marina.tests.Mod_2_SpaceTypes#verifyDeleteSpace_TC_212</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">com.marina.tests.Mod_2_SpaceTypes#verifyPopupAddSpace_TC_202</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m7">com.marina.tests.Mod_2_SpaceTypes#verifySpaceData_afterEdit_TC_208</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m8">com.marina.tests.Mod_2_SpaceTypes#verifySpaceData_fromTableData_TC_205</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m9">com.marina.tests.Mod_2_SpaceTypes#verifySpacePage_Tc_201</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m10">com.marina.tests.Mod_2_SpaceTypes#verify_serachField_withSpaceName_TC_211</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
->>>>>>> refs/heads/Talha
+<h2>Default test</h2><h3 id="m0">com.marina.tests.Mod_3_AllSpaces#createNewSpaceMandatoryFields_TC_402</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: Arrays differ at element [1]: Automation Type !=  expected [Automation Type] but found []
+	at org.testng.Assert.fail(Assert.java:97)
+	at org.testng.Assert.assertEqualsImpl(Assert.java:136)
+	at org.testng.Assert.assertEquals(Assert.java:1172)
+	at org.testng.Assert.assertEquals(Assert.java:1230)
+	at com.marina.tests.Mod_3_AllSpaces.createNewSpaceMandatoryFields_TC_402(Mod_3_AllSpaces.java:71)
+	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
+	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
+	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
+	at java.lang.reflect.Method.invoke(Method.java:498)
+	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:134)
+	at org.testng.internal.TestInvoker.invokeMethod(TestInvoker.java:597)
+	at org.testng.internal.TestInvoker.invokeTestMethod(TestInvoker.java:173)
+	at org.testng.internal.MethodRunner.runInSequence(MethodRunner.java:46)
+	at org.testng.internal.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:816)
+	at org.testng.internal.TestInvoker.invokeTestMethods(TestInvoker.java:146)
+	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:146)
+	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:128)
+	at java.util.ArrayList.forEach(ArrayList.java:1257)
+	at org.testng.TestRunner.privateRun(TestRunner.java:766)
+	at org.testng.TestRunner.run(TestRunner.java:587)
+	at org.testng.SuiteRunner.runTest(SuiteRunner.java:384)
+	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:378)
+	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:337)
+	at org.testng.SuiteRunner.run(SuiteRunner.java:286)
+	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:53)
+	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:96)
+	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1187)
+	at org.testng.TestNG.runSuitesLocally(TestNG.java:1109)
+	at org.testng.TestNG.runSuites(TestNG.java:1039)
+	at org.testng.TestNG.run(TestNG.java:1007)
+	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
+	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
+	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
+</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
