create script tc_214, selection unit period two option show,

--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,8 +11,9 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>exportNewAddSpace_verifyCompleteRecords_TC_209</td>
-<td>&nbsp;</td></tr>
+<td>SelectionUnitPeriod_and_verify_two_option_TC_214</td>
+<td>regression smoke </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
