--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a5f880">  <td>23/11/10 16:05:27</td>   <td>0</td> <td title="&lt;&lt;TestBase.afterSuite()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@612679d6]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1885996206</td>   <td></td> </tr>
-<tr bgcolor="faf8f2">  <td>23/11/10 16:05:24</td>   <td>-2608</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@612679d6]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td>  <td>main@1885996206</td>   <td></td> </tr>
-<tr bgcolor="faf8f2">  <td>23/11/10 16:04:52</td>   <td>-34690</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@612679d6]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td>  <td>main@1885996206</td>   <td></td> </tr>
-<tr bgcolor="faf8f2">  <td>23/11/10 16:05:22</td>   <td>-5192</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.exportNewAddSpace_verifyCompleteRecords_TC_209()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@612679d6]">exportNewAddSpace_verifyCompleteRecords_TC_209</td> 
-  <td>main@1885996206</td>   <td></td> </tr>
-<tr bgcolor="a5f880">  <td>23/11/10 16:04:52</td>   <td>-34926</td> <td title="&gt;&gt;TestBase.loadConfig()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@612679d6]">&gt;&gt;loadConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1885996206</td>   <td></td> </tr>
+<tr bgcolor="f2bbc1">  <td>23/11/20 05:39:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Mod_2_SpaceTypes.SelectionUnitPeriod_and_verify_two_option_TC_214()[pri:15, instance:com.marina.tests.Mod_2_SpaceTypes@4229bb3f]">SelectionUnitPeriod_and_verify_two_option_TC_214</td> 
+  <td>main@1627396964</td>   <td></td> </tr>
+<tr bgcolor="96d072">  <td>23/11/20 05:39:36</td>   <td>4099</td> <td title="&lt;&lt;TestBase.afterSuite()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@4229bb3f]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1627396964</td>   <td></td> </tr>
+<tr bgcolor="f2bbc1">  <td>23/11/20 05:39:34</td>   <td>1790</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Mod_2_SpaceTypes.afterTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@4229bb3f]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td>  <td>main@1627396964</td>   <td></td> </tr>
+<tr bgcolor="f2bbc1">  <td>23/11/20 05:38:57</td>   <td>-35415</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Mod_2_SpaceTypes.beforeTest()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@4229bb3f]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td>  <td>main@1627396964</td>   <td></td> </tr>
+<tr bgcolor="96d072">  <td>23/11/20 05:38:56</td>   <td>-35960</td> <td title="&gt;&gt;TestBase.loadConfig()[pri:0, instance:com.marina.tests.Mod_2_SpaceTypes@4229bb3f]">&gt;&gt;loadConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1627396964</td>   <td></td> </tr>
 </table>
