--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\talha.tahir\AppData\Local\Temp\testng-eclipse--1547847210\testng-customsuite.xml</span>
+                    <span>C:\Users\talha.tahir\AppData\Local\Temp\testng-eclipse-2093842701\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content failed suite-Default_suite">
                       <span>
                         <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.marina.tests.Mod_7_RatesStorage" class="method navigator-link" hash-for-method="nightly_add_record_without_holiday_TC_1105">nightly_add_record_without_holiday_TC_1105</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.marina.tests.Mod_7_RatesStorage" class="method navigator-link" hash-for-method="verify_allBucketsMonths_prices_TC_1106">verify_allBucketsMonths_prices_TC_1106</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-Default_suite -->
@@ -125,12 +125,15 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="nightly_add_record_without_holiday_TC_1105">
-                  </a> <!-- nightly_add_record_without_holiday_TC_1105 -->
-                  <span class="method-name">nightly_add_record_without_holiday_TC_1105</span>
-                  <div class="stack-trace">java.lang.ArrayIndexOutOfBoundsException: Index 7 out of bounds for length 7
-	at com.marina.pages.RatesStorageNightlyPricePage.calendar_create(RatesStorageNightlyPricePage.java:456)
-	at com.marina.tests.Mod_7_RatesStorage.nightly_add_record_without_holiday_TC_1105(Mod_7_RatesStorage.java:176)
+                  <a name="verify_allBucketsMonths_prices_TC_1106">
+                  </a> <!-- verify_allBucketsMonths_prices_TC_1106 -->
+                  <span class="method-name">verify_allBucketsMonths_prices_TC_1106</span>
+                  <div class="stack-trace">java.lang.AssertionError: expected [$1.00] but found [null]
+	at org.testng.Assert.fail(Assert.java:97)
+	at org.testng.Assert.failNotEquals(Assert.java:969)
+	at org.testng.Assert.assertEquals(Assert.java:1166)
+	at org.testng.Assert.assertEquals(Assert.java:1230)
+	at com.marina.tests.Mod_7_RatesStorage.verify_allBucketsMonths_prices_TC_1106(Mod_7_RatesStorage.java:266)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
 	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
@@ -162,7 +165,7 @@
 
 </div> <!-- stack-trace -->
                   <em>
-(Create Nightly rate group with single row and without holiday)                  </em>
+(Verify all the added rates for all the different sizes)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -170,7 +173,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\talha.tahir\AppData\Local\Temp\testng-eclipse--1547847210\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\talha.tahir\AppData\Local\Temp\testng-eclipse-2093842701\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -207,7 +210,7 @@
               <span class="test-group-name">regression</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">nightly_add_record_without_holiday_TC_1105</span>
+                <span class="method-in-group-name">verify_allBucketsMonths_prices_TC_1106</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -215,7 +218,7 @@
               <span class="test-group-name">smoke</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">nightly_add_record_without_holiday_TC_1105</span>
+                <span class="method-in-group-name">verify_allBucketsMonths_prices_TC_1106</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -237,14 +240,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'nightly_add_record_without_holiday_TC_1105')
+data.setCell(0, 1, 'verify_allBucketsMonths_prices_TC_1106')
 data.setCell(0, 2, 'com.marina.tests.Mod_7_RatesStorage')
-data.setCell(0, 3, 183995);
+data.setCell(0, 3, 134276);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 3 minutes</span>
+              <span class="suite-total-time">Total running time: 2 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -277,21 +280,21 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="configuration-method before">
                 <span class="method-name">beforeTest</span>
-                <span class="method-start">508 ms</span>
+                <span class="method-start">440 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
-                <span class="method-name">nightly_add_record_without_holiday_TC_1105</span>
-                <span class="method-start">27443 ms</span>
+                <span class="method-name">verify_allBucketsMonths_prices_TC_1106</span>
+                <span class="method-start">24498 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterTest</span>
-                <span class="method-start">211444 ms</span>
+                <span class="method-start">158779 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-suite after">
                 <span class="method-name">afterSuite</span>
-                <span class="method-start">214985 ms</span>
+                <span class="method-start">161614 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
